--- a/index.html
+++ b/index.html
@@ -18,5 +18,17 @@
         </ul>
     </div>
 </nav>
+<header class="header">
+    <div class="container">
+        <div>
+            <h1>This website is awesome</h1>
+            <p>This website has some subtex that goes here under the main title.
+                It's a smaller font and the color is lower contrast
+            </p>
+            <button type="button">Sign up</button>
+        </div>
+    </div>
+</header>
+
 </body>
 </html>
