Add section for boxes and assign classes
Add section for boxes, add classes future styling, might need to come
back to this section and edit it a little bit, but I'm not 100% sure.

modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,30 @@
             </p>
             <button type="button">Sign up</button>
         </div>
+        <img src="#" alt=""/>
     </div>
 </header>
+<section class="boxes">
+    <div class="container">
+        <h2>Some random info.</h2>
+        <div class="box">
+            <img src="#" alt=""/>
+            <p>this is some subtext under an illustration or img</p>
+        </div>
+        <div class="box">
+            <img src="#" alt=""/>
+            <p>this is some subtext under an illustration or img</p>
+        </div>
+        <div class="box">
+            <img src="#" alt=""/>
+            <p>this is some subtext under an illustration or img</p>
+        </div>
+        <div class="box">
+            <img src="#" alt=""/>
+            <p>this is some subtext under an illustration or img</p>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
