Add quote section to display quote, wrap into div
Add quote section to display quote, wrap it into div container,
assign classes to the quote and author for future styling, might need to
revisit after for, as those divs man...still wiggling on them.

modified:   index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         </div>
     </div>
 </section>
-
+<section class="quote">
+    <div class="container">
+        <p class="quote_main">This is an inspiring quote, or a testimonial.</p>
+        <p class="quote-author">Thor</p>
+    </div>
+</section>
 </body>
 </html>
