Add action section
Add action section, assign classes, warp into div, add text and button.

modified:   index.html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@
 </section>
 <section class="quote">
     <div class="container">
-        <p class="quote_main">This is an inspiring quote, or a testimonial.</p>
+        <p class="quote-main">This is an inspiring quote, or a testimonial.</p>
         <p class="quote-author">Thor</p>
+    </div>
+</section>
+<section class="actionCall">
+    <div class="container">
+        <div class="actionBox">
+            <h4>Call to action! It's time!</h4>
+            <p>Sigh up for our product by clicking that button right over there!</p>
+            <button type="button">Sign up</button>
+        </div>
     </div>
 </section>
 </body>
