--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
         </div>
     </div>
 </section>
+<footer class="footer">
+    <div class="container">
+        <p>Copyright &copy; 2022, Odin</p>
+    </div>
+</footer>
 </body>
 </html>
