--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 <nav class="navbar">
     <div class="container">
-        <div class="logo">Header Logo</div>
+        <div class="logo">Amok's Hotel and Spa</div>
         <ul class="nav">
             <li>
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
+                <a href="#">Reserve now</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Sign In</a>
             </li>
         </ul>
     </div>
