Fix ul class and li tags
Add and fix li gats under navbar for proper display

	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <div class="container">
         <div class="logo">Amok's Hotel and Spa</div>
         <ul class="nav">
-            <li>
-                <a href="#">Reserve now</a>
-                <a href="#">Contact Us</a>
-                <a href="#">Sign In</a>
-            </li>
+            <li><a href="#">Reserve now</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Sign In</a></li>
         </ul>
     </div>
 </nav>
