--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="logo">Amok's Hotel and Spa</div>
         <ul class="nav">
             <li><a href="#">Reserve now</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Sign In</a></li>
+            <li><a href="https://www.linkedin.com/in/antondashkouski" target="https://www.linkedin.com/in/antondashkouski">Contact Us</a></li>
+            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Sign In</a></li>
         </ul>
     </div>
 </nav>
