Add hotel image and alt description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </p>
             <button type="button">Sign up</button>
         </div>
-        <img src="#" alt=""/>
+        <img src="../landing-page/images/header.png" alt="View of the mountains through the window"/>
     </div>
 </header>
 <section class="boxes">
