--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="header">
     <div class="container">
         <div>
-            <h1>This website is awesome</h1>
+            <h1>Amok's Landing, Neverland</h1>
             <p>This website has some subtex that goes here under the main title.
                 It's a smaller font and the color is lower contrast
             </p>
