--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>This website has some subtex that goes here under the main title.
                 It's a smaller font and the color is lower contrast
             </p>
-            <button type="button">Sign up</button>
+            <a href="https://www.youtube.com/watch?v=ZWrUEsVrdSU" target="_blank" class="button">Sign Up...sooner or later</a>
         </div>
         <img src="../landing-page/images/header.png" alt="View of the mountains through the window"/>
     </div>
