Add paths to the images

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <h2>Some random info.</h2>
     <div class="container">
         <div class="box">
-            <img src="#" alt=""/>
+            <img src="../landing-page/images/dining.png" alt=""/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="#" alt=""/>
+            <img src="../landing-page/images/coffeebar.png" alt=""/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="#" alt=""/>
+            <img src="../landing-page/images/room.png" alt=""/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="#" alt=""/>
+            <img src="../landing-page/images/sauna.png" alt=""/>
             <p>this is some subtext under an illustration or img</p>
         </div>
     </div>
