--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 <section class="boxes">
         <h2>Some random info.</h2>
-    <div class="container">
+    <div class="boxSection">
         <div class="box">
             <img src="../landing-page/images/dining.png" alt=""/>
             <p>this is some subtext under an illustration or img</p>
