Add text to the quote section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </section>
 <section class="quote">
     <div class="container">
-        <p class="quote-main">This is an inspiring quote, or a testimonial.</p>
-        <p class="quote-author">Thor</p>
+        <p class="quote-main">The great advantage of a hotel is that it is a refuge from home life.</p>
+        <p class="quote-author">George Bernard Shaw</p>
     </div>
 </section>
 <section class="actionCall">
