--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
     </div>
 </section>
 <section class="actionCall">
-    <div class="container">
         <div class="actionBox">
-            <h4>Call to action! It's time!</h4>
-            <p>Sigh up for our product by clicking that button right over there!</p>
-            <button type="button">Sign up</button>
+            <h4 class="h4Call">Call to action! It's time!</h4>
+            <p class="sign-up-request">Sigh up for our product by clicking that button right over there!</p> 
         </div>
-    </div>
+        <a class="button" href="#" target="_blank">Sign Up</a>
 </section>
 <footer class="footer">
     <div class="container">
