Remove container div and button
Add link instead, but might change to button class again to style it as
requested...but it's sooo dull

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 </section>
 <section class="actionCall">
         <div class="actionBox">
-            <h4 class="h4Call">Call to action! It's time!</h4>
-            <p class="sign-up-request">Sigh up for our product by clicking that button right over there!</p> 
+            <h4>Call to action! It's time!</h4>
+            <p>Sigh up for our product by clicking that button right over there!</p> 
         </div>
         <a class="button" href="#" target="_blank">Sign Up</a>
 </section>
