--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h4>Call to action! It's time!</h4>
             <p>Sigh up for our product by clicking that button right over there!</p> 
         </div>
-        <a class="button" href="#" target="_blank">Sign Up</a>
+        <button class="button">Sign Up</button>
 </section>
 <footer class="footer">
     <div class="container">
