Change text to represent TOP

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </section>
 <footer class="footer">
     <div class="container">
-        <p>Copyright &copy; 2022, Odin</p>
+        <p>Copyright &copy; 2022, The Odin Project</p>
     </div>
 </footer>
 </body>
