Add alt description to rest of img

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <h2>Some random info.</h2>
     <div class="boxSection">
         <div class="box">
-            <img src="../landing-page/images/dining.png" alt=""/>
+            <img src="../landing-page/images/dining.png" alt="Picture of a dining room"/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="../landing-page/images/coffeebar.png" alt=""/>
+            <img src="../landing-page/images/coffeebar.png" alt="Picture of a coffee shop"/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="../landing-page/images/room.png" alt=""/>
+            <img src="../landing-page/images/room.png" alt="Picture of a hotel room"/>
             <p>this is some subtext under an illustration or img</p>
         </div>
         <div class="box">
-            <img src="../landing-page/images/sauna.png" alt=""/>
+            <img src="../landing-page/images/sauna.png" alt="Picture of a sauna"/>
             <p>this is some subtext under an illustration or img</p>
         </div>
     </div>
