Add Resources section to footer
Wrap it into div. Working on styling

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 <footer class="footer">
     <div class="container">
         <p>Copyright &copy; 2022, The Odin Project</p>
+        <div class="resources">
+            <a href="#" target="_blank">Resources</a>
+        </div>
     </div>
 </footer>
 </body>
