--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="loader.css">
     <title>Landing Page</title>
 </head>
 <body>
+<div id="loader">
+        <p>Run Amok, Inc.</p>
+        <p>A penny for you thoughts my love</p>
+</div>
 <nav class="navbar">
     <div class="container">
         <div class="logo">Amok's Hotel and Spa</div>
