--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div id="loader">
-        <p>Run Amok, Inc.</p>
-        <p>A penny for you thoughts my love</p>
+        <p class="loader_main">Run Amok, Inc.</p>
+        <p class="loader_quote">A penny for you thoughts my love</p>
 </div>
 <nav class="navbar">
     <div class="container">
