Add div wrap around all elements
<div class="loaderWrap">

And link to JS file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p class="loader_main">Run Amok, Inc.</p>
         <p class="loader_quote">A penny for you thoughts my love</p>
 </div>
+<div class="loaderWrap">
 <nav class="navbar">
     <div class="container">
         <div class="logo">Amok's Hotel and Spa</div>
@@ -73,5 +74,7 @@
         <p>Copyright &copy; 2022, The Odin Project</p>
     </div>
 </footer>
+</div>
+<script src="./main.js"></script>
 </body>
 </html>
