Add description and other elements
Work in progress....

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 <div id="loader">
         <p class="loader_main">Run Amok, Inc.</p>
-        <p class="loader_quote">A penny for you thoughts my love</p>
+        <p class="loader_quote">We don't know what tomorrow brings</p>
 </div>
 <div class="loaderWrap">
 <nav class="navbar">
     <div class="container">
-        <div class="logo">Amok's Hotel and Spa</div>
+        <div class="logo">Club Amok Inn</div>
         <ul class="nav">
             <li><a href="#">Reserve now</a></li>
             <li><a href="https://www.linkedin.com/in/antondashkouski" target="_blank">Contact Us</a></li>
@@ -26,9 +26,8 @@
 <header class="header">
     <div class="container">
         <div>
-            <h1>Amok's Landing, Neverland</h1>
-            <p>This website has some subtex that goes here under the main title.
-                It's a smaller font and the color is lower contrast
+            <h1>Club Amok Inn, Neverland</h1>
+            <p>The Club Amok Inn, known for its beautiful accommodations and never seen location makes for the perfect shelter to hide your existential crisis. Enjoy spacious and well-designed guest rooms where you can rethink your life choices. Begin your day with our famous and moody onsite restaurant, or maybe with our cafe, where we serve with real Arabica coffee straight out from the espresso machine (we don't serve that nasty coffee from a dripping machine that makes this gift of Gods taste like water). Visit our famous "Dune" sauna and enjoy hot and healthy vapor cleaning your soul and body.
             </p>
             <a href="https://www.youtube.com/watch?v=ZWrUEsVrdSU" target="_blank" class="button">Sign Up...sooner or later</a>
         </div>
@@ -36,23 +35,23 @@
     </div>
 </header>
 <section class="boxes">
-        <h2>Some random info.</h2>
+        <h2>Why stay with us?</h2>
     <div class="boxSection">
         <div class="box">
             <img src="../landing-page/images/dining.png" alt="Picture of a dining room"/>
-            <p>this is some subtext under an illustration or img</p>
+            <p>Enjoy menu inspired by Neverland cuisine. Come dine with us & experience an authentic Neverland meal in an intimate dining space</p>
         </div>
         <div class="box">
             <img src="../landing-page/images/coffeebar.png" alt="Picture of a coffee shop"/>
-            <p>this is some subtext under an illustration or img</p>
+            <p>Our cafe, where you can enjoy real coffee made with passion and love. Just like in Tween Peaks!</p>
         </div>
         <div class="box">
             <img src="../landing-page/images/room.png" alt="Picture of a hotel room"/>
-            <p>this is some subtext under an illustration or img</p>
+            <p>Spacious and clean rooms, designed by famous Anthua De Raloen. A bootle of Altu'la Revers champaign included as a compliment.</p>
         </div>
         <div class="box">
             <img src="../landing-page/images/sauna.png" alt="Picture of a sauna"/>
-            <p>this is some subtext under an illustration or img</p>
+            <p>And our scandinavian sauna. The smell of pine tress, hot steam will clean your body in a blink of an eye!</p>
         </div>
     </div>
 </section>
