Add description and other elements

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
     </div>
 </header>
 <section class="boxes">
-        <h2>Why stay with us?</h2>
+        <h2>Not convinced yet?</h2>
     <div class="boxSection">
         <div class="box">
             <img src="../landing-page/images/dining.png" alt="Picture of a dining room"/>
-            <p>Enjoy menu inspired by Neverland cuisine. Come dine with us & experience an authentic Neverland meal in an intimate dining space</p>
+            <p>Enjoy menu inspired by Neverland cuisine. Come dine with us & experience an authentic Neverland meal in an intimate dining space.</p>
         </div>
         <div class="box">
             <img src="../landing-page/images/coffeebar.png" alt="Picture of a coffee shop"/>
-            <p>Our cafe, where you can enjoy real coffee made with passion and love. Just like in Tween Peaks!</p>
+            <p>Cafe, where you can enjoy real coffee made with passion and love. Just like in Tween Peaks!</p>
         </div>
         <div class="box">
             <img src="../landing-page/images/room.png" alt="Picture of a hotel room"/>
@@ -51,7 +51,7 @@
         </div>
         <div class="box">
             <img src="../landing-page/images/sauna.png" alt="Picture of a sauna"/>
-            <p>And our scandinavian sauna. The smell of pine tress, hot steam will clean your body in a blink of an eye!</p>
+            <p>Scandinavian sauna. The smell of pine tress and hot steam will clean your body in a blink of an eye!</p>
         </div>
     </div>
 </section>
@@ -63,8 +63,8 @@
 </section>
 <section class="actionCall">
         <div class="actionBox">
-            <h4>Call to action! It's time!</h4>
-            <p>Sigh up for our product by clicking that button right over there!</p> 
+            <h4>What are waiting for? Book now!</h4>
+            <p>Sigh up, accept all cookies, accept our Privacy Policy, our Hotel Policy, our Policy for Policy and get ready for yor journey to Club Amok Inn!</p> 
         </div>
         <button class="buttonAction">Sign Up</button>
 </section>
