--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="loader.css">
-    <title>Landing Page</title>
+<link rel="icon" href="../landing-page/images/tabicon.png">
+    <title>Club Amok Inn</title>
 </head>
 <body>
 <div id="loader">
